tests/api/reference/negative/14-tokens-join-element.asm
const invalid: string = tokens.join(list.of("name", 42))
